--- a/OcelotGateway/OcelotGateway/OcelotGateway.csproj
+++ b/OcelotGateway/OcelotGateway/OcelotGateway.csproj
@@ -1,5 +1,6 @@
-<Project Sdk="Microsoft.NET.Sdk.Web"
-       xmlns="http://schemas.microsoft.com/developer/msbuild/2003"   >
+﻿<Project Sdk="Microsoft.NET.Sdk.Web"
+       xmlns="http://schemas.microsoft.com/developer/msbuild/2003"  
+         ToolsVersion="4.0">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
